--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     table {
       margin-left: 17rem;
       margin-top: 3rem;
-      width:110rem;
-      font-size: 1rem;
+      width:100rem;
+      font-size: 0.9rem;
       border-collapse: collapse;
       text-align: left;
     }
@@ -70,9 +70,10 @@
       
       .update_button {
         display: inline-block;
-        padding: 0.3rem 0.8rem;
+        padding: 0.5rem 0.5rem;
         background-color: #4CAF50;
         color: white;
+        width:3.1rem;
         text-decoration: none;
         transition: background-color 0.3s;
       }
@@ -83,7 +84,7 @@
 
       .remove_button {
         display: inline-block;
-        padding: 0.3rem 0.6rem;
+        padding: 0.5rem 0.5rem;
         background-color: #d80d0d;
         color: white;
         text-decoration: none;
@@ -91,5 +92,5 @@
       }
 
       .remove_button:hover {
-        background-color: #d80d0d;
+        background-color: #a80909;
       }
