--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
           top: 0;
           left: 0;
           background-color: #534e4e;
-          margin-top: 3.45rem;
+          margin-top: 3.5rem;
           padding-top: 1rem;
           
       }
@@ -111,6 +111,7 @@
         border: 1px solid #ddd;
         border-radius: 4px;
         margin-right: 0.1rem;
+        font-size: 1.3rem;
     }
     
     .search-container input[type="submit"] {
@@ -120,8 +121,19 @@
         border-radius: 0.2rem;
         border-style: none;
         cursor: pointer;
-        margin-top: 0.9rem;
+        padding: 0.4rem;
+        margin-top: 2.8rem;
         margin-bottom: 2.9rem;
         margin-left: 0;
     }
     
+.log-out {
+  float: right;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.3rem;
+  margin-right: 3%;
+  cursor: pointer;
+  background-color: #333;
+}
