--- a/style_add.css
+++ b/style_add.css
@@ -8,7 +8,7 @@ h1 {
     margin-top: 6rem;
 }
 
-form {
+#myForm {
     max-width: 200rem;
     margin: 3% 15rem;
     margin-left: 32rem;
@@ -18,21 +18,21 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-form label {
+#myForm label {
     display: block;
     margin-bottom: 1.2rem;
 }
 
-form input[type="text"],
-form input[type="date"] {
+#myForm input[type="text"],
+#myForm input[type="date"] {
     width: 100%;
     padding: 0.6rem;
     margin-bottom: 2rem;
     box-sizing: border-box;
 }
 
-form input[type="submit"],
-form button {
+#myForm input[type="submit"],
+#myForm button {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
@@ -43,8 +43,7 @@ form button {
     margin-left: 8.3rem;
     margin-top: 1rem;
 }
-
-form input[type="submit"]:hover,
-form button:hover {
+#myForm input[type="submit"]:hover,
+#myForm button:hover {
     background-color: #555;
 }
