--- a/style_add.css
+++ b/style_add.css
@@ -16,6 +16,7 @@ h1 {
     background-color: #fff;
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 70rem;
 }
 
 #myForm label {
@@ -25,7 +26,7 @@ h1 {
 
 #myForm input[type="text"],
 #myForm input[type="date"] {
-    width: 100%;
+    width: 67rem;
     padding: 0.6rem;
     margin-bottom: 2rem;
     box-sizing: border-box;
