--- a/style_delete.css
+++ b/style_delete.css
@@ -1,10 +1,7 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-
 }
-
 
 h1 {
     color: black;
@@ -17,35 +14,22 @@ p {
     text-align: center;
 }
 
-form {
+#delete {
     text-align: center;
     margin-top: 2rem;
     margin-left: 10rem;
 }
 
-input[type="submit"]
-    {
-    background-color: #333;
-    color: hsl(0, 0%, 100%);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 10px;
-    margin-left: 8.3rem;
-    margin-top: 1rem;
-    text-decoration: none;
-}
-.cancel
-    {
+input[type="submit"], .cancel {
     background-color: #333;
     color: #fff;
-    padding: 8px 18px;
+    padding: 10px 18px; /* Adjust the padding to achieve the desired size */
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-right: 10px;
-    margin-left: 8.3rem;
+    font-size: 1rem;
+    margin-left: 8rem;
     margin-top: 1rem;
     text-decoration: none;
 }
