--- a/style_update.css
+++ b/style_update.css
@@ -16,6 +16,7 @@ h1 {
     background-color: #fff;
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 70rem;
 }
 
 #myForm  label {
