--- a/style_add.css
+++ b/style_add.css
@@ -48,3 +48,10 @@ h1 {
 #myForm button:hover {
     background-color: #555;
 }
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+  }
+  
