--- a/style_update.css
+++ b/style_update.css
@@ -49,3 +49,10 @@ h1 {
 #myForm  button:hover {
     background-color: #555;
 }
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+  }
+  
