--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
       body
       {
       font-family: Arial, sans-serif;
+      overflow-x: hidden;
       }
 
       h1{ 
@@ -137,3 +138,18 @@
   cursor: pointer;
   background-color: #333;
 }
+#add_user
+{ text-align: center;
+  background-color: #595959;
+  color: white;
+  border: 0.1rem;
+  border-radius: 0.2rem;
+  border-style: none;
+  cursor: pointer;
+  width: 18rem;
+  padding: 0.30rem;
+  margin-left: 19rem;
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
