--- a/style_add.css
+++ b/style_add.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -9,14 +10,12 @@ h1 {
 }
 
 #myForm {
-    max-width: 200rem;
+    max-width: 39.8rem;
     margin: 3% 15rem;
-    margin-left: 32rem;
+    margin-left: 20rem;
     padding: 2rem;
-    background-color: #fff;
-    border-radius: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 70rem;
+    
 }
 
 #myForm label {
@@ -26,7 +25,7 @@ h1 {
 
 #myForm input[type="text"],#myForm input[type="password"],
 #myForm input[type="date"] {
-    width: 67rem;
+    width: 40rem;
     padding: 0.6rem;
     margin-bottom: 2rem;
     box-sizing: border-box;
