--- a/style_add.css
+++ b/style_add.css
@@ -12,10 +12,11 @@ h1 {
 #myForm {
     max-width: 39.8rem;
     margin: 3% 15rem;
-    margin-left: 20rem;
+    margin-left:37%;
     padding: 2rem;
-    width: 70rem;
-    
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 40%;
 }
 
 #myForm label {
@@ -25,13 +26,13 @@ h1 {
 
 #myForm input[type="text"],#myForm input[type="password"],
 #myForm input[type="date"] {
-    width: 40rem;
+    width: 100%;
     padding: 0.6rem;
     margin-bottom: 2rem;
     box-sizing: border-box;
 }
 
-#myForm input[type="submit"],
+#myForm input[type="button"],
 #myForm button {
     background-color: #333;
     color: #fff;
@@ -39,11 +40,11 @@ h1 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 10px;
-    margin-left: 8.3rem;
+    margin-right: 2%;
+    margin-left: 22%;
     margin-top: 1rem;
 }
-#myForm input[type="submit"]:hover,
+#myForm input[type="button"]:hover,
 #myForm button:hover {
     background-color: #555;
 }
@@ -53,4 +54,11 @@ h1 {
     margin-top: -26px;
     margin-bottom: 15px;
   }
+#status
+{
+    color: green;
+    font-size: 20px;
+    margin-left: 72%;
+    margin-top: 3rem;
+}
   
