--- a/style_add.css
+++ b/style_add.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 #myForm input[type="text"],#myForm input[type="password"],
-#myForm input[type="date"] {
+#myForm input[type="date"],#username{
     width: 100%;
     padding: 0.6rem;
     margin-bottom: 2rem;
